<resources>
    <string name="app_name">KasirUKK</string>

    <string name="save">Save</string>
    <string name="user">User</string>
    <string name="menu">Menu</string>
    <string name="meja">Meja</string>
    <string name="admin">Admin</string>
    <string name="data_user">Data User</string>

    <string-array name="spinner_job">
        <item>Pilih</item>
        <item>Admin</item>
        <item>Kasir</item>
        <item>Management</item>
    </string-array>

    <string-array name="spinner_daily">
        <item>All</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="spinner_menu">
        <item>Pilih</item>
        <item>Makanan</item>
        <item>Minuman</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_user">Add User</string>
    <string name="nama_user">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="role">Role</string>
    <string name="update_user">Update User</string>
    <string name="makanan">Makanan</string>
    <string name="minuman">Minuman</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="update_menu">Update Menu</string>
    <string name="type">Type</string>
    <string name="add_menu">Add Menu</string>
    <string name="no_meja">Nomor Meja</string>
    <string name="add_meja">Add Meja</string>
    <string name="transaction">Transaction</string>
    <string name="on_going">On Going</string>
    <string name="add_order">Add Order</string>
    <string name="note">Note</string>
    <string name="order">Order</string>
    <string name="table">Table</string>
    <string name="total">Total</string>
    <string name="finish_order">Finish Order</string>
    <string name="history">History</string>
    <string name="dashboard">Dashboard</string>
    <string name="favorite_menu">Favorite Menu</string>
    <string name="report">Report</string>
    <string name="login">Login</string>
    <string name="management">Management</string>
    <string name="kasir">Cashier</string>
</resources>