<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/admin_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ContentDescription"
    tools:context=".feature.admin.menu.fragment.AdminViewMenuFragment">

    <TextView
        android:id="@+id/fragment_admin_view_user_tv_user"
        style="@style/TextSubHead"
        android:layout_marginStart="@dimen/dua_empat"
        android:text="Welcome, Budi"
        android:layout_marginTop="@dimen/tiga_dua"
        android:textColor="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragment_admin_view_user_tv_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/admin"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_enam_belas"
        android:layout_marginStart="@dimen/dua_empat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_admin_view_user_tv_user" />

    <ImageButton
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_logout"
        android:layout_marginTop="@dimen/lima_enam"
        android:layout_marginEnd="@dimen/dua_empat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragment_admin_view_menu_tv_makanan"
        style="@style/TextSubHead"
        android:layout_marginTop="@dimen/dua_empat"
        android:layout_marginStart="@dimen/dua_empat"
        android:text="@string/makanan"
        android:textColor="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_admin_view_user_tv_role" />

    <ScrollView
        android:id="@+id/fragment_admin_view_menu_sv_makanan"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_admin_view_menu_tv_makanan">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fragment_admin_view_menu_rv_makanan"
            style="@style/BaseUI"
            android:layout_marginTop="@dimen/delapan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fragment_admin_view_menu_sv_makanan"
            tools:listitem="@layout/rv_card_menu" />

    </ScrollView>
    <TextView
        android:id="@+id/fragment_admin_view_menu_tv_minuman"
        style="@style/TextSubHead"
        android:text="@string/minuman"
        android:textColor="@color/gray"
        android:layout_marginTop="@dimen/dua_empat"
        android:layout_marginStart="@dimen/dua_empat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_admin_view_menu_sv_makanan"
        />

    <ScrollView
        android:id="@+id/fragment_admin_view_menu_sv_minuman"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_admin_view_menu_tv_minuman">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fragment_admin_view_menu_rv_minuman"
            style="@style/BaseUI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/delapan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_admin_view_menu_tv_minuman"
            tools:listitem="@layout/rv_card_menu" />

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fragment_admin_view_menu_fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/enam_belas"
        android:layout_marginBottom="@dimen/enam_belas"
        android:src="@drawable/ic_add"
        android:backgroundTint="@color/secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white"
         />

</androidx.constraintlayout.widget.ConstraintLayout>
